--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -462,6 +462,7 @@
                 <span class="access-key-container">
                   <img class="access-key-icon" src="images/key-avatar.svg">
                   <input type="text" class="access-key-name"
+                    id$="accesskey[[item.id]]"
                     placeholder="{{item.placeholderName}}"
                     value="[[item.name]]"
                     on-blur="_handleNameInputBlur"
@@ -600,7 +601,7 @@
         },
         accessKeySortBy: {
           type: String,
-          value: 'name'
+          value: 'creationOrder'
         },
         accessKeySortDirection: {
           // 1 == ascending, -1 == descending
@@ -633,15 +634,7 @@
         this.push('accessKeyRows', accessKey);
         // Force rendering to happen synchronously.  Otherwise we will finish the loop before the new DOM element is added
         this.$.accessKeysContainer.querySelector('dom-repeat').render();
-        const inputs = this.$.accessKeysContainer.querySelectorAll(
-            '.access-key-row .access-key-container > input');
-        // NodeLists don't have a find() method.
-        for (const key of inputs.values()) {
-          if (key.placeholder === accessKey.placeholderName) {
-            key.select();
-            break;
-          }
-        }
+        this.$.accessKeysContainer.querySelector(`#accesskey${accessKey.id}`).select();
       },
       removeAccessKey: function(accessKeyId) {
         for (let ui in this.accessKeyRows) {
@@ -842,17 +835,23 @@
             return (a.transferredBytes - b.transferredBytes) * this.accessKeySortDirection;
           }.bind(this);
         }
-        // Default to sorting by name.
+        if(accessKeySortBy === 'name') {
+          return function(a, b) {
+            const aName = (a.name || a.placeholderName).toLowerCase();
+            const bName = (b.name || b.placeholderName).toLowerCase();
+            console.log(`${aName} =?= ${bName}`)
+            if (aName === bName) {
+              console.log("equal");
+              return 0;
+            }
+            const out = (aName < bName ? -1 : 1) * this.accessKeySortDirection;
+            console.log(`${out}`);
+            return out;
+          }.bind(this);
+        }
+        // Default to sorting by order the keys were added.
         return function(a, b) {
-          const nameA = a.name.toUpperCase() || a.placeholderName.toUpperCase();
-          const nameB = b.name.toUpperCase() || b.placeholderName.toUpperCase();;
-          if (nameA < nameB) {
-            return -1 * this.accessKeySortDirection;
-          }
-          if (nameA > nameB) {
-            return 1 * this.accessKeySortDirection;
-          }
-          return 0;
+          return (a - b) * this.accessKeySortDirection;
         }.bind(this);
       },
       _computeShouldShowSortIcon: function(accessKeySortBy, accessKeySortDirection,
